# connections_task

./: CMakeLists.txt  JsonParametresReader.cpp  JsonParametresReader.h  ReadMe.txt  briefAlgorithmDescription.txt  microprocessorsCmake.cpp
